
2019-06-23  Simon Sobisch <simonsobisch@gnu.org>

	* mlio.c, move.c, numeric.c, reportio.c, termio.c: fixed possible
	  arithmetic overflow (especially because of cast errors on x64)

2019-06-10  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (gc_conf, set_config_val, get_config_val), coblocal.h:
	  split ENV_INT to ENV_UINT (all current options) and ENV_UINT (allowing
	  a negative min_value), actually check for numeric values

2019-06-09  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: adjustments to fix issues reported by static code analyzer

2019-06-07  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_runtime_conf): fixed theoretical buffer overflow for bad
	  translation ("via" translated as very long string)
	* common.h: new define MAX_FILE_KEYS (currently at 255) with main purpose
	  to limit allocation of external provided key definition

2019-05-31  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_settings_screenio): moved out of COB_GEN_SCREENIO

2019-05-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (AM_CPPFLAGS): include new substituted LIBCOB_CPPFLAGS
	* Makefile.am: handle LOCAL_CJSON by adding cJSON.c to libcob's nodist
	  sources and cJSON.c + cJSON.h to DISTCLEANFILES

2019-05-26  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_runtime_hint), coblocal.h: new funtion for output additional
	  information to a warning/error directly called before, especially important
	  for (cob_runtime_error) which invokes the error handlers,
	  used for this scenario throughout common.c
	* common.c (cob_field_to_string): explicit check for field address
	* fileio.c (cob_get_filename_print), coblocal.h: new function to provide a
	  filename for output with filename, assign and possible file mapping
	* fileio.c (cob_exit_fileio), common.c (cob_fatal_error):
	  use of cob_get_filename_print
	* fileio.c (cob_delete_file): check errno after unlink/indexed_file_delete